[gd_scene load_steps=2 format=3 uid="uid://cb3uxsmykjtri"]

[ext_resource type="Script" path="res://scenes/main_menu/player_slot.gd" id="1_r3fhy"]

[node name="PlayerSlot" type="Panel"]
custom_minimum_size = Vector2(0, 66)
offset_right = 335.0
offset_bottom = 93.0
script = ExtResource("1_r3fhy")

[node name="PlayerName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -15.5
offset_right = 120.0
offset_bottom = 7.5
grow_vertical = 2
theme_override_font_sizes/font_size = 33
text = "PlayerName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -69.465
offset_top = -27.0
offset_right = -15.465
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 33
text = "X"
icon_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
